# confdumpv3

./: Cargo.toml  input.txt
src/: main.rs
src/services/: args.rs  genrate_output.rs  mod.rs  query_table.rs
wmi-rs/src/: connection.rs  result_enumerator.rs  variant.rs
